--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,17 @@
 .task1 .item {
+	position: absolute;
+	left: 200px;
+	bottom: 150px;
 }
 
 .task2 .item {
+	position: absolute;
+	left: calc(50% - 40px);
+	bottom: calc(50% - 40px);
 }
 
 .task3 .item {
+	position: absolute;
 }
 
 .container4 {
@@ -12,107 +19,146 @@
 
 .task4 {
   width: 1000px;
+  position: absolute;
+  bottom: 50%;
+  left: calc(50% - 40px);
+
 }
 .task4 .item {
 }
 
 .task5 .item1 {
   background-color: red;
+  position: absolute;
+  z-index: 2;
+  bottom: 72%;
+  left: 20px;
 }
 .task5 .item2 {
+	position: absolute;
+	z-index: 1;
+	bottom: 67%;
+	left: 40px;
 }
 .task5 .item3 {
   background-color: green;
+  position: absolute;
+  z-index: 3;
 }
 
 .task6 .item {
+	float: left;
 }
 
 .task7 .item {
+	float: right;
 }
 
 .task8 .item1 {
+	float: left;
 }
 .task8 .item2 {
   height: 120px;
+  float: right;
 }
 
 .task8 p {
+	clear: both;
 }
 
 .task9 .item1 {
   height: 200px;
+  float: left;
 }
 .task9 .item2 {
+	float: right;
 }
 .task9 p {
+	clear: right;
 }
 
 .task10 .item1 {
+	float: left;
 }
 .task10 .item2 {
+	height: 200px;
+	float: right;
 }
 .task10 p {
+	clear: left;
 }
 
 .task11 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .task12 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .task13 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: fill;
 }
 
 .task14 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: scale-down;
 }
 
 .task15 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: right;
 }
 
 .task16 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: top left;
 }
 
 .task17 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: bottom;
 }
 
 .task18 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: 40px 25px;
 }
 
 .task19 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: center;
 }
 
 .task20 {
+	user-select: none;
 }
 
 .task21 {
+	user-select: all;
 }
 
 .task22 {
+	caret-color: blue;
 }
 
 html {
+	scroll-behavior: smooth;
 }
